models adjustments
